Replace the JDK/WebSocket(JDK11+) with OkHttp to work on Android 5.0+ (API level 21+) + JDK8+ #360
Former-commit-id: 6ecf4764d1e28dcf2edbc7715cb4cd3639be0252